--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sample project</title>
 </head>
 <body>
-  <h2><center>School Management system</center></h2>  
+  <h2><center>School Management system</center></h2> 
+    <p> The management </p>
 </body>
 </html>
